<resources>
    <string name="app_name">RoomAutomation</string>
    <string name="action_settings">Settings</string>
    <string name="ssid_lbl">SSID</string>
    <string name="pw_lbl">Password</string>
    <string name="email_lbl">Email ID</string>
    <string name="dev_lbl">Device ID</string>
    <string name="login_lbl">Login</string>
    <string name="register_lbl">Register</string>
    <string name="seldev_lbl">Select Device</string>
    <string name="selser_lbl">Select Server</string>
    <string name="conn_lbl">Connect</string>
    <string name="conf_lbl">Config</string>
    <string name="setas_lbl">Set As</string>
    <string name="server_rblbl">Server</string>
    <string name="client_rblbl">Client</string>
    <string name="on_lbl">ON</string>
    <string name="off_lbl">OFF</string>
    <string name="comp0_lbl">Comp0</string>
    <string name="comp1_lbl">Comp1</string>
    <string name="comp2_lbl">Comp2</string>
    <string name="comp3_lbl">Comp3</string>
    <string name="comp4_lbl">Comp4</string>
    <string name="comp5_lbl">Comp5</string>
    <string name="rctitle_lbl">To access it Remotely fill up your WiFi details below</string>
    <string name="roomsw1_lbl">RoomSwitch 1</string>
    <string name="roomsw2_lbl">RoomSwitch 2</string>
    <string name="roomsw3_lbl">RoomSwitch 3</string>
    <string name="masw_lbl">Aut</string>
    <string name="both_lbl">Both</string>
    <string name="test_lbl">Start Testing</string>
    <string name="test1_lbl">Stop Testing</string>
    <string name="reg_lbl">Register</string>
</resources>
