<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/comp0_lbl"
            android:id="@+id/comp0_tv"
            android:layout_weight="0.2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp" />

        <Switch
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/ma_switch0"
            android:layout_weight="0.2"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp" />

        <Button
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/off_lbl"
            android:id="@+id/comp0_btn"
            android:layout_weight="0.1"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comp0_sb"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:max="1000" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/comp1_lbl"
            android:id="@+id/comp1_tv"
            android:layout_weight="0.2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp" />

        <Switch
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/ma_switch1"
            android:layout_weight="0.2"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp" />

        <Button
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/off_lbl"
            android:id="@+id/comp1_btn"
            android:layout_weight="0.1"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comp1_sb"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:max="1000" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/comp2_lbl"
            android:id="@+id/comp2_tv"
            android:layout_weight="0.2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp" />

        <Switch
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/ma_switch2"
            android:layout_weight="0.2"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp" />

        <Button
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/off_lbl"
            android:id="@+id/comp2_btn"
            android:layout_weight="0.8"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/test_lbl"
            android:id="@+id/teststart_btn"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/test1_lbl"
            android:id="@+id/teststop_btn"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />
    </LinearLayout>
</LinearLayout>